fundy-manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: fundy

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fundy-backend
  namespace: fundy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fundy-backend
  template:
    metadata:
      labels:
        app: fundy-backend
    spec:
      containers:
        - name: fundy-container
          image: kiik52/fundy-be-pipe:latest
          ports:
            - containerPort: 8888

---
apiVersion: v1
kind: Service
metadata:
  name: fundy-service
  namespace: fundy
spec:
  selector:
    app: fundy-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
  type: ClusterIP
